--- a/TODO
+++ b/TODO
@@ -1,18 +1,17 @@
-GUI napoveda
 
 desetinna carka
 
 uzivatelska dokumentace:
   V uživatelské dokumentaci bude mimo jiné i postup instalace a odinstalace programu pomocí instalátoru (odinstalátoru).
+  
   Dále bude uveden návod pro manuální (od)instalaci, tzn. postup překladu ze zdrojových kódů, vytvoření 
   zástupců (ikonek) a dalších akcí, které provádí instalátor
-  V dokumentaci a v README musí být uvedeno, které prostředí jste zvolili a jak v něm projekt zprovoznit.
 
 programova dokumentace: 
   K matematické knihovně i k celému programu musí být vygenerována programová dokumentace. Preferovaný nástroj je Doxygen.
-  default doxyfile: {doxygen -g}
 
 Na kalkulačce si povinně vyzkoušíte debugging – odevzdáte snímek obrazovky debuggeru v matematické knihovně.
+eff
 
 mockup tbd:
   K programu bude vytvořen mockup uživatelského rozhraní další verze kalkulačky (plánované do budoucna), která bude 
@@ -27,14 +26,8 @@ debianni balicek final tbd
 zprava a vystup profiling:
   Odevzdejte protokol obsahující výstup profileru a stručné shrnutí
 
-throw catch errors
-
-licha odmocnina
-
 makefile a struktura repozitare:
   preklad spustitelneho souboru calc
-
-reminder, mrknout vic na ten copiloti kod na konci, hazi to pri uber extremne specifickym inputu errory
 
 hodnoceni.txt
 
